[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nbgrader-k8s-exchange"
version = "0.0.1"
authors = [
  { name="KrKOo", email="krkoo.123@gmail.com" },
]
description = "K8s compatibe exchange for nbgrader"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KrKOo/nbgrader-k8s-exchange"
"Bug Tracker" = "https://github.com/KrKOo/nbgrader-k8s-exchange/issues"

dependencies = [
  "nbgrader==0.9.1",
]